EGLWindow: Append noError context attribs only if enabled.

Push EGL_CONTEXT_OPENGL_NO_ERROR_KHR only to the context attribute list
if it's enabled in the mConfigParams. Prior to this patch the attribute
was pushed with a EGL_FALSE value if noError was disabled but available.

This resolves issues on EGL implementations which expose the extension
but fail if it's in the attrib list if certain conditions are met.

This is the case for mesa 21.0 when EGL_CONTEXT_MAJOR_VERSION_KHR is set
to 1 / GLES1.

Mesa upstream issue:
https://gitlab.freedesktop.org/mesa/mesa/-/issues/4586

Bug: angleproject:5809
Change-Id: I91dfafe2a89f0488556942813087e54499895088
Reviewed-on: https://chromium-review.googlesource.com/c/angle/angle/+/2797331
Reviewed-by: Jamie Madill <jmadill@chromium.org>
Reviewed-by: Cody Northrop <cnorthrop@google.com>
Commit-Queue: Lubosz Sarnecki <lubosz.sarnecki@collabora.com>